Fix icon mobile version color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ a>.clwhite {
 }
 
 a>.wish {
-    color: white;
     display: flex;
     padding-left: 10px;
 }
